--- a/src/toast.css
+++ b/src/toast.css
@@ -1,8 +1,10 @@
 .toast {
-    @apply fixed start-1/2 end-1/2 top-auto bottom-0 m-4 p-4 flex flex-col gap-2;
-    @apply min-w-fit whitespace-nowrap rounded-box transition-all text-black;
-    translate: -50% 0;
+    @apply fixed bottom-0 z-100 flex flex-row my-4 w-full whitespace-nowrap;
     animation: toast 0.25s ease-out;
+
+    & > span {
+        @apply mx-auto p-4 rounded-box text-black;
+    }
 }
 @keyframes toast {
     0% {
